# Number-Systems

./: README.md  number.py  pyproject.toml  setup.py
numsys/: __init__.py  __main__.py  number.py
src/: number.py
tests/: test_number.py
